--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,10 @@ channels:
     url: https://www.lrt.lt/servisai/stream_url/live/get_live_url.php?channel=LTV1
     streamUrlPath: response.data.content
     contentType: application/vnd.apple.mpegurl
+    programUrl: https://www.lrt.lt/programa
+    programSelector: 'div[data-slider-id="2022.02.13"]'
+    programStylesheet: https://www.lrt.lt/css/app.css
+    programScrollTo: .is-playing
   - id: lnk
     url: https://lnk.lt/api/video/video-config/137535
     streamUrlPath: videoInfo.videoUrl
