--- a/config.yaml
+++ b/config.yaml
@@ -12,3 +12,5 @@ channels:
     url: https://lnk.lt/api/video/video-config/137535
     streamUrlPath: videoInfo.videoUrl
     contentType: application/vnd.apple.mpegurl
+    programUrl: https://lnk.lt/api/main/content-page-by-program/tv-programa
+    programScrollTo: .is-playing
